--- a/config/gen_secrets/job.yaml
+++ b/config/gen_secrets/job.yaml
@@ -17,7 +17,7 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
-          image: pomerium/ingress-controller:main
+          image: pomerium/ingress-controller:v0.28.0
           imagePullPolicy: IfNotPresent
           securityContext:
             allowPrivilegeEscalation: false
