--- a/deployment.yaml
+++ b/deployment.yaml
@@ -753,8 +753,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.podIP
-        image: pomerium/ingress-controller:main
-        imagePullPolicy: Always
+        image: pomerium/ingress-controller:v0.28.0
+        imagePullPolicy: IfNotPresent
         name: pomerium
         ports:
         - containerPort: 8443
@@ -815,7 +815,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: pomerium/ingress-controller:main
+        image: pomerium/ingress-controller:v0.28.0
         imagePullPolicy: IfNotPresent
         name: gen-secrets
         securityContext:
