--- a/config/pomerium/deployment/ports.yaml
+++ b/config/pomerium/deployment/ports.yaml
@@ -11,6 +11,9 @@ spec:
             - containerPort: 8443
               name: https
               protocol: TCP
+            - containerPort: 8443
+              name: quic
+              protocol: UDP
             - name: http
               containerPort: 8080
               protocol: TCP
