--- a/config/pomerium/deployment/no-root.yaml
+++ b/config/pomerium/deployment/no-root.yaml
@@ -7,10 +7,16 @@ spec:
     spec:
       securityContext:
         runAsNonRoot: true
+        sysctls:
+          - name: net.ipv4.ip_unprivileged_port_start
+            value: "80"
       containers:
         - name: pomerium
           securityContext:
             allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
             runAsNonRoot: true
             runAsGroup: 65532
             runAsUser: 65532
