--- a/config/pomerium/deployment/ports.yaml
+++ b/config/pomerium/deployment/ports.yaml
@@ -8,11 +8,14 @@ spec:
       containers:
         - name: pomerium
           ports:
-            - containerPort: 8443
+            - containerPort: 443
               name: https
               protocol: TCP
+            - containerPort: 443
+              name: quic
+              protocol: UDP
             - name: http
-              containerPort: 8080
+              containerPort: 80
               protocol: TCP
             - name: metrics
               containerPort: 9090
