set docker image to v0.29.0

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -839,8 +839,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.podIP
-        image: pomerium/ingress-controller:main
-        imagePullPolicy: Always
+        image: pomerium/ingress-controller:v0.29.0
+        imagePullPolicy: IfNotPresent
         name: pomerium
         ports:
         - containerPort: 8443
