set docker image tag

--- a/config/pomerium/deployment/image.yaml
+++ b/config/pomerium/deployment/image.yaml
@@ -8,5 +8,5 @@ spec:
     spec:
       containers:
         - name: pomerium
-          image: pomerium/ingress-controller:v0.30.3
-          imagePullPolicy: Always
+          image: pomerium/ingress-controller:v0.30.4
+          imagePullPolicy: IfNotPresent
