--- a/config/pomerium/deployment/args.yaml
+++ b/config/pomerium/deployment/args.yaml
@@ -12,6 +12,7 @@ spec:
             - --pomerium-config=global
             - --update-status-from-service=$(POMERIUM_NAMESPACE)/pomerium-proxy
             - --metrics-bind-address=$(POD_IP):9090
+            - --health-probe-bind-address=$(POD_IP):28080
           env:
             - name: POMERIUM_NAMESPACE
               valueFrom:
