run pre-commit hooks

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -962,6 +962,7 @@ spec:
         - --pomerium-config=global
         - --update-status-from-service=$(POMERIUM_NAMESPACE)/pomerium-proxy
         - --metrics-bind-address=$(POD_IP):9090
+        - --health-probe-bind-address=$(POD_IP):28080
         env:
         - name: TMPDIR
           value: /tmp
