build health checks into default deployment

--- a/config/pomerium/deployment/healthcheck.yaml
+++ b/config/pomerium/deployment/healthcheck.yaml
@@ -11,6 +11,8 @@ spec:
             httpGet:
               path: /startupz
               port : 28080
+            failureThreshold: 40
+            periodSeconds: 15
           livenessProbe:
             httpGet:
               path: /healthz
