--- a/config/pomerium/deployment/base.yaml
+++ b/config/pomerium/deployment/base.yaml
@@ -2,9 +2,16 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: pomerium
+  labels:
+    app.kubernetes.io/name: pomerium
+    app.kubernetes.io/component: proxy
 spec:
   replicas: 1
   template:
+    metadata:
+      labels:
+        app.kubernetes.io/name: pomerium
+        app.kubernetes.io/component: proxy
     spec:
       containers:
         - name: pomerium
