--- a/config/pomerium/service/proxy.yaml
+++ b/config/pomerium/service/proxy.yaml
@@ -2,18 +2,24 @@ apiVersion: v1
 kind: Service
 metadata:
   name: pomerium-proxy
+  labels:
+    app.kubernetes.io/name: pomerium
+    app.kubernetes.io/component: proxy
 spec:
   type: LoadBalancer
+  selector:
+    app.kubernetes.io/name: pomerium
+    app.kubernetes.io/component: proxy
   ports:
-    - port: 443
+    - name: https
+      port: 443
       targetPort: https
       protocol: TCP
-      name: https
-    - port: 443
+    - name: quic
+      port: 443
       targetPort: quic
       protocol: UDP
-      name: quic
     - name: http
+      port: 80
       targetPort: http
       protocol: TCP
-      port: 80
