--- a/deployment.yaml
+++ b/deployment.yaml
@@ -937,6 +937,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
+    app.kubernetes.io/component: proxy
     app.kubernetes.io/name: pomerium
   name: pomerium-proxy
   namespace: pomerium
@@ -955,6 +956,7 @@ spec:
     protocol: TCP
     targetPort: http
   selector:
+    app.kubernetes.io/component: proxy
     app.kubernetes.io/name: pomerium
   type: LoadBalancer
 ---
@@ -962,6 +964,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
+    app.kubernetes.io/component: proxy
     app.kubernetes.io/name: pomerium
   name: pomerium
   namespace: pomerium
@@ -973,6 +976,7 @@ spec:
   template:
     metadata:
       labels:
+        app.kubernetes.io/component: proxy
         app.kubernetes.io/name: pomerium
     spec:
       containers:
