--- a/config/clustered-databroker/statefulset/base.yaml
+++ b/config/clustered-databroker/statefulset/base.yaml
@@ -9,6 +9,11 @@ spec:
       app.kubernetes.io/component: databroker
   serviceName: pomerium-databroker
   replicas: 3
+  podManagementPolicy: Parallel
+  updateStrategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
   template:
     metadata:
       labels:
