delete pvcs on scale

--- a/config/clustered-databroker/statefulset/base.yaml
+++ b/config/clustered-databroker/statefulset/base.yaml
@@ -14,6 +14,9 @@ spec:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: 1
+  persistentVolumeClaimRetentionPolicy:
+    whenDeleted: Delete
+    whenScaled: Delete
   template:
     metadata:
       labels:
