--- a/deployment.yaml
+++ b/deployment.yaml
@@ -992,8 +992,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.podIP
-        image: pomerium/ingress-controller:main
-        imagePullPolicy: Always
+        image: pomerium/ingress-controller:v0.31.0
+        imagePullPolicy: IfNotPresent
         livenessProbe:
           failureThreshold: 10
           httpGet:
