--- a/config/clustered-databroker/statefulset/image.yaml
+++ b/config/clustered-databroker/statefulset/image.yaml
@@ -7,5 +7,5 @@ spec:
     spec:
       containers:
         - name: pomerium
-          image: pomerium/ingress-controller:main
-          imagePullPolicy: Always
+          image: pomerium/ingress-controller:v0.32.0
+          imagePullPolicy: IfNotPresent
