feat: migrate from Endpoints to EndpointSlice API
The Endpoints API is deprecated in favor of EndpointSlice which provides
better scalability for large services and supports dual-stack networking.

This change:
- Adds model/endpoint_slices.go with AggregateEndpointSlices function
  that converts EndpointSlices to the existing EndpointSubset format
- Updates the ingress controller to watch EndpointSlice resources
  instead of Endpoints
- Uses label selector kubernetes.io/service-name to fetch slices
- Only includes endpoints with conditions.Ready=true
- Deduplicates addresses across multiple slices (handles rolling updates)
- Updates RBAC to grant discovery.k8s.io/endpointslices permissions

The route generation code (pomerium/ingress_to_route.go) remains unchanged
due to the adapter pattern preserving the EndpointSubset structure.

--- a/config/pomerium/rbac/role.yaml
+++ b/config/pomerium/rbac/role.yaml
@@ -8,7 +8,6 @@ rules:
       - ""
     resources:
       - services
-      - endpoints
       - secrets
     verbs:
       - get
@@ -19,9 +18,15 @@ rules:
     resources:
       - services/status
       - secrets/status
-      - endpoints/status
     verbs:
       - get
+  - apiGroups:
+      - discovery.k8s.io
+    resources:
+      - endpointslices
+    verbs:
+      - list
+      - watch
   - apiGroups:
       - networking.k8s.io
     resources:
