--- a/deployment.yaml
+++ b/deployment.yaml
@@ -820,7 +820,6 @@ rules:
   - ""
   resources:
   - services
-  - endpoints
   - secrets
   verbs:
   - get
@@ -831,9 +830,15 @@ rules:
   resources:
   - services/status
   - secrets/status
-  - endpoints/status
   verbs:
   - get
+- apiGroups:
+  - discovery.k8s.io
+  resources:
+  - endpointslices
+  verbs:
+  - list
+  - watch
 - apiGroups:
   - networking.k8s.io
   resources:
